# vero

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  WORKLOG.md  pyproject.toml
benchmarks/Arithmetic/: ArithmeticV2.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/DedekindReals/: DedekindReals.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/Flocq/: Flocq.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/Huffman/: Huffman.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/Json/: JsonV2.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/Sequences/: Sequences.lean  SequencesV2.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/Unicode/: UnicodeV2.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/VerifiedBitmasks/: VerifiedBitmasks.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/VerifiedIronkv/: VerifiedIronkv.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/base58/: Base58.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/cachetools/: Cachetools.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/croniter/: Croniter.lean  lake-manifest.json  lakefile.toml  manifest.json
benchmarks/deposit_sc/: DepositSc.lean  lake-manifest.json  lakefile.toml  (+1 more)
conf/: run.yaml
docs/: agents.md  curation-lean-tutorial.md  gen-eval-tutorial.md  pipeline-schema.md
reference/: README.md
scripts/: prefetch_upstream.py
tests/: test_iterate.py  test_sweep_aggregate.py
(+1308 files in other folders)
