[project]
name = "vero"
version = "0.1.0"
description = "Repository-level Verified Code Generation benchmark and evaluation framework"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.36.0",
    "beautifulsoup4>=4.13.0",
    "claude-agent-sdk>=0.2.110",
    "gitpython==3.1.45",
    "hydra-core>=1.3.2",
    "jinja2>=3.1.0",
    "litellm>=1.40.0",
    "loguru==0.7.2",
    "networkx==3.1",
    "openai>=1.50.0",
    "pymupdf>=1.26.0",
    "pypdf2>=3.0.0",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests==2.32.4",
    "tenacity>=8.2.0",
    "lean-lsp-mcp>=0.26.0",
    "lean-explore>=0.1.0",
]

[project.scripts]
vero = "vero.cli:main"
vero-extract = "vero.extract_cli:main"
vero-sweep-aggregate = "vero.sweep_aggregate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vero"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py310"
extend-exclude = ["examples", "datasets"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
markers = [
    "slow: slow tests that invoke external tools (e.g. `lake build`); opt in with `-m slow`",
]
